--- a/Contact.html
+++ b/Contact.html
@@ -40,7 +40,7 @@
                     </div>
                     <div class="contact-item">
                         <h3>Address</h3>
-                        <p>3 Square d'Anjou, 49660<br>Torfou, France</p>
+                        <p>1 Rue Marc Antoine Petit, 69002<br>Lyon, France</p>
                     </div>
                 </div>
                 <div class="contact-form">
@@ -65,7 +65,6 @@
                     <h3>Find Me On</h3>
                     <a href="https://fr.linkedin.com/in/mat%C3%A9o-rezeau/en" target="_blank" class="social-link">LinkedIn</a>
                     <a href="https://www.xing.com/profile/Mateo_Rezeau" target="_blank" class="social-link">Xing</a>
-                    <a href="XXXXXX" target="_blank" class="social-link">Instagram</a>
                 </div>
             </div>
         </section>
@@ -77,7 +76,7 @@
     <div class="container">
         <div class="footer-content">
                         <div class="footer-contact">
-                <p>Email: <a href="mailto:your-email@example.com" class="footer-email">mcjrezeau@hotmail.fr</a></p>
+                <p>Email: <a href="mailto:mcjrezeau@hotmail.fr" class="footer-email">mcjrezeau@hotmail.fr</a></p>
                 <p>Phone: <a href="tel:+1234567890" class="footer-phone">+33 7 68 99 67 31</a></p>
             </div>
             <div class="footer-social">
