--- a/News.html
+++ b/News.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+risk <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,17 @@
 
    <div class="container">
         <h1 class="page-title">News</h1>
-        
+
+        <!-- News block -->
+        <div class="news-block">
+            <div class="block-content">
+                <h2 class="news-title">Internship research</h2>
+                <p class="news-date">Date: 2024-09-01</p>
+                <p class="news-description">Started looking for an internship opportunity in market finance, PE or M&A.</p>
+            </div>
+            <img src="Research_picture.jpg" alt="Thumbnail" class="thumbnail">
+        </div>
+       
         <!-- News block -->
         <div class="news-block">
             <div class="block-content">
@@ -43,7 +53,7 @@
             <div class="block-content">
                 <h2 class="news-title">Internship Banque de France</h2>
                 <p class="news-date">Date: 2024-06-03</p>
-                <p class="news-description">Started a new position as a financial analyst - consolidated accounts at Banque de France.</p>
+                <p class="news-description">Started a new position as a credit risk analyst at Banque de France.</p>
             </div>
             <img src="Employment_picture.png" alt="Thumbnail" class="thumbnail">
         </div>
