--- a/News.html
+++ b/News.html
@@ -35,7 +35,7 @@ risk <!DOCTYPE html>
                 <p class="news-date">Date: 2024-09-01</p>
                 <p class="news-description">Started looking for an internship opportunity in market finance, PE or M&A.</p>
             </div>
-            <img src="Research_picture.jpg" alt="Thumbnail" class="thumbnail">
+            <img src="Research_picture.png" alt="Thumbnail" class="thumbnail">
         </div>
        
         <!-- News block -->
