--- a/News.html
+++ b/News.html
@@ -31,9 +31,9 @@
         <!-- News block -->
         <div class="news-block">
             <div class="block-content">
-                <h2 class="news-title">Internship research</h2>
+                <h2 class="news-title">Summer internship research</h2>
                 <p class="news-date">Date: 2024-09-01</p>
-                <p class="news-description">Started looking for an internship opportunity in market finance, PE or M&A.</p>
+                <p class="news-description">Started looking for an internship opportunity in market finance: trading, structuring, asset management. Available from 16/06/2025 to 13/09/2025.</p>
             </div>
             <img src="Research_picture.png" alt="Thumbnail" class="thumbnail">
         </div>
