--- a/News.html
+++ b/News.html
@@ -31,7 +31,7 @@
         <!-- News block -->
         <div class="news-block">
             <div class="block-content">
-                <h2 class="news-title">Summer internship research</h2>
+                <h2 class="news-title">Summer Internship Research</h2>
                 <p class="news-date">Date: 2024-09-01</p>
                 <p class="news-description">Started looking for an internship opportunity in market finance: trading, structuring, asset management. Available from 16/06/2025 to 13/09/2025.</p>
             </div>
@@ -58,6 +58,16 @@
             <img src="Employment_picture.png" alt="Thumbnail" class="thumbnail">
         </div>
 
+        <!-- News block -->
+        <div class="news-block">
+            <div class="block-content">
+                <h2 class="news-title">Gap Year</h2>
+                <p class="news-date">Date: 2024-06-01</p>
+                <p class="news-description">Started a gap year between the 1st and 2nd years of Master. This gap year's objective is to acquire practical skills from professional experiences.</p>
+            </div>
+            <img src="Employment_picture.png" alt="Thumbnail" class="thumbnail">
+        </div>
+       
         <!-- News block -->
          <div class="news-block">
             <div class="block-content">
